# amemgym

./: pyproject.toml
configs/agent/: memoryos.json  memos.json
configs/env/: v1.base.json  v1.extra.json
src/amemgym/assistants/: __init__.py  memoryos.py  memos.py
src/amemgym/assistants/tests/unit/: test_memoryos_agent.py
src/amemgym/env/: gen.py
src/amemgym/eval/: memoryos_overall.py
src/amemgym/eval/tests/: test_memoryos.py  test_memoryos_overall.py
