[project]
name = "amemgym"
version = "0.1.0"
description = "Interactive Memory Benchmarking for Assistants in Long-horizon Conversations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "backoff>=2.2.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mem0ai>=1.0.5",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "zep-cloud>=3.18.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
